# DropTea

./: Cargo.toml  README.md  build.bat  pyproject.toml  requirements.txt  setup.bat
App/: droptea_api.h  droptea_core.dll.lib  main.cpp  wintoastlib.cpp  wintoastlib.h
cpp/: bridge.cpp
setup/: build.bat  setup_firewall.ps1
src/: lib.rs  pybridge.rs
src/core/: compression.rs  config.rs  discovery.rs  engine.rs  events.rs  ffi.rs  handlers.rs  handshake.rs  mod.rs  notification.rs  security.rs  transfer.rs  utils.rs
src/core/transports/: mod.rs  plain_tcp.rs  quic.rs  tcp.rs
