[package]
name = "droptea_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "droptea_core"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python"]
python = ["dep:pyo3", "dep:pyo3-log", "dep:pyo3-asyncio"]
ffi = ["dep:libc"]

[dependencies]
# --- Optional Dependencies ---
libc = { version = "0.2", optional = true }
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }
pyo3-log = { version = "0.9", optional = true }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"], optional = true }

# --- Core Dependencies ---
tokio = { version = "1.0", features = ["full"] }
tokio-rustls = "0.24"
rustls = { version = "0.21", features = ["dangerous_configuration", "quic"] }
rcgen = "0.11"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 🔥 FIXED: เพิ่ม 'gzip' และ 'zlib' (สำคัญมากสำหรับ iOS)
async-compression = { version = "0.4", features = ["tokio", "zstd", "gzip", "zlib"] }
walkdir = "2.3"
zip = "0.6"
fs2 = "0.4"
mdns-sd = "0.17.1"
blake3 = "1.5"
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
whoami = "1.5"
btleplug = "0.11"
futures = "0.3"
once_cell = "1.18"
async-trait = "0.1.89"
hex = "0.4.3"
quinn = "0.10"
toml = "0.8"
dashmap = "5.5"
rand = "0.8"
socket2 = "0.5"

[build-dependencies]
cc = "1.0"