[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "droptea_core"
version = "0.1.0"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
    "rich>=14.0.0",
    "prompt_toolkit>=3.0.0",
    "psutil>=5.0.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]